<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_orb_slam3</name>
  <version>1.5.0</version>
  <description>ROS2 implementation of ORB SLAM3 V1.0</description>
  <maintainer email="azmyin12@gmail.com">Azmyin Md. Kamal</maintainer>
  <license>GPL 3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>Pangolin</build_depend>
  <build_depend>boost_system</build_depend>
  <build_depend>boost_serialization</build_depend>
  <build_depend>libcrypto</build_depend>
  <build_depend>python3-natsort</build_depend>

  <!-- As suggested by the official tutorial, add your custom message interfaces as follows -->
  <!-- <depend>your_custom_msg_interface</depend>  -->
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>Pangolin</exec_depend>
  <exec_depend>boost_system</exec_depend>
  <exec_depend>boost_serialization</exec_depend>
  <exec_depend>libcrypto</exec_depend>
  <exec_depend>python3-natsort</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
